@@ -10,7 +10,7 @@
 # ignore leftover POD-to-HTML stuff
 pod2htmd.tmp
 # ignore .html documentation
-*.html
+##*.html
 # local build process
 /PDFbuild.pl
 /version
