@@ -4,8 +4,8 @@ use constant DEBUG => 0;
 use warnings;
 use strict;
 
-our $VERSION = '1.04'; # VERSION
-my $LAST_UPDATE = '1.05'; # manually update whenever file is edited
+our $VERSION = '1.05'; # VERSION
+my $LAST_UPDATE = '1.06'; # manually update whenever file is edited
 
 eval { XSLoader::load("Text::KnuthPlass", $VERSION); } or die $@;
 # Or else there's a Perl version
@@ -217,6 +217,10 @@ C<value>s, which are the text which went into them; glue has C<stretch>
 and C<shrink> to determine how much it should vary in width. That should
 be all you need for basic typesetting; for more, see the source, and see
 the original Knuth-Plass paper in "Digital Typography".
+
+Why I<typeset> rather than something like I<linesplit>? Per 
+L</ACKNOWLEDGEMENTS>, this code is ported from the Javascript product 
+B<typeset>.
 
 This method is a thin wrapper around the three methods below.
 
@@ -610,7 +614,7 @@ Knuth-Plass implementation. Any bugs, however, are probably my fault.
 
 =head1 BUGS
 
-Please report any bugs or feature requests to the _issues_ section of 
+Please report any bugs or feature requests to the I<issues> section of 
 C<https://github.com/PhilterPaper/Text-KnuthPlass>.
 
 Do NOT under ANY circumstances open a PR (Pull Request) to report a bug. It is 
